[gd_scene load_steps=2 format=3 uid="uid://7k2ggxkhlakw"]

[ext_resource type="Script" path="res://party_stats_component.gd" id="1_j88n1"]

[node name="PartyStatsComponent" type="Node"]
script = ExtResource("1_j88n1")

[node name="NaturalRegeneration" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="DeathTimer1" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DeathTimer2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DeathTimer3" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DeathTimer4" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="NaturalRegeneration" to="." method="_on_natural_regeneration_timeout"]
[connection signal="timeout" from="DeathTimer1" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="DeathTimer2" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="DeathTimer3" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="DeathTimer4" to="." method="_on_death_timer_timeout"]
